[ADDED]   dealer support for reports
[ADDED]   device swaps for hardware optimization
[ADDED]   integration with hardware optimization
[ADDED]   page coverage settings for hardware optimization
[ADDED]   single sign-on access for all components
[ADDED]   support for management of other users part of your organization
[ADDED]   the forgot password system
[ADDED]   the health check report
[CHANGED] assessments, hardware optimization, hardware quotes and health checks
[CHANGED] hardware optimization to use ajax for a better ux
[CHANGED] how toner pricing imports handle finding a toner
[CHANGED] more settings now have the ability to handle 0 as a value
[CHANGED] order of settings fields to be more uniform
[CHANGED] service cost per page to a combination of parts and labor
[CHANGED] user names to be email addresses
[FIXED]   bugs with report generation
[FIXED]   issues with update pricing
[FIXED]   issue where service cost was sometimes not being applied to hardware optimization replacements
[FIXED]   replacement devices did not have service cost per page
[FIXED]   titles inside customer facing hardware optimization report to be less ambiguous
[REMOVED] customer pricing config for hardware optimization
[REMOVED] dealer margin for hardware optimization

Version 1.3.1
-------------
[FIXED]   bugs with toner management
[REMOVED] transfer reports functionality

Version 1.3.0
-------------
[ADDED]   support for xerox csv file imports
[REMOVED] old 'ticketing' system for hardware additions

Version 1.0.0
-------------
[ADDED]   support for the assessment, gross margin, and solution reports
[CHANGED] permissions to allow role management
[CHANGED] proposal generator workflow

Version 0.5.0
-------------
[ADDED]   First functional version of the quote generator

Version 0.1.0
-------------
[ADDED]   first preview of the quote generator
[ADDED]   new type of permission system to allow finer grain permissions
[ADDED]   very minimal support for assessment features